# graph-vls

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: compression_sweep_config.yaml  config.yaml  jet_pretrain_config.yaml  jet_pretrain_final_config.yaml  nas_config.yaml  pooling_sweep_config.yaml  qgnn_evaluate_config.yaml  qgnn_train_config.yaml  train_gvls_config.yaml
configs/best/: citeseer.yaml  cora.yaml
configs/compression/: citeseer.yaml  citeseer_graph_decoder.yaml  cora.yaml  cora_graph_decoder.yaml  pubmed.yaml  pubmed_graph_decoder.yaml
configs/data/: citeseer.yaml  cora.yaml  pubmed.yaml  qg_jets.yaml
configs/experiment/: compression_sweep.yaml  jet_pooling_sweep.yaml  pooling_sweep.yaml
configs/model/: default.yaml  gvls.yaml
configs/nas/: default.yaml
configs/train/: default.yaml  full_graph.yaml  jet_pretrain.yaml  jet_pretrain_final.yaml  qgnn_classifier.yaml
experiments/: compression_sweep.py  evaluate_qgnn.py  nas.py  plot_compression_curves.py  pooling_sweep.py  pretrain_gvls_jets.py  pretrain_gvls_jets_final.py  smoke_test.py  train_gvls.py  train_qgnn.py
optuna_studies/: citeseer.db  cora.db  pubmed.db
reports/: Mid-Term Report Guidelines for Mizzou QIC Summer Internship Program.docx  midterm_report.md
results/compression/: citeseer.csv  citeseer_graph_decoder.csv  citeseer_pooling.csv  cora.csv  cora_graph_decoder.csv  cora_pooling.csv  pubmed.csv  pubmed_graph_decoder.csv  pubmed_pooling.csv  qg_jets_pooling.csv
scripts/: _activate_env.sh  run_evaluate_qgnn.sh  run_full_qgnn_pipeline.sh  run_pretrain_gvls_jets_final.sh  run_train_qgnn.sh
specs/: mission.md  roadmap.md  tech_stack.md
specs/phase0/: plan.md  requirements.md  validation.md
tests/: test_compression_metrics.py  test_compression_sweep.py  test_data.py  test_decoder.py  test_elbo.py  test_encoder.py  test_full_graph_split.py  test_gvls.py  test_jet_sweep.py  test_jets.py  test_latent_graph.py  test_metrics.py  test_nas.py  test_pooling.py  test_qgnn.py  test_qgnn_training.py
wandb/: latest-run
(+280 files in other folders)
