[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gvls"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.1",
    "torch_geometric>=2.4",
    "scikit-learn>=1.3",
    "hydra-core>=1.3",
    "wandb>=0.16",
    "optuna>=3.0",
    "matplotlib>=3.8",
    "energyflow>=1.4",
    # numpy<2 and qiskit<2 are load-bearing, not just conservative pins:
    # energyflow's `wasserstein` dependency ships a compiled extension built
    # against the NumPy 1.x C-API, while qiskit>=2.0 hard-requires numpy>=2.0
    # -- the two cannot coexist (confirmed on a remote Linux machine: `import
    # energyflow` crashed with "AttributeError: _ARRAY_API not found" once
    # numpy was upgraded to 2.x for qiskit). qiskit<2 only requires
    # numpy>=1.17, so pinning both keeps energyflow and qiskit compatible in
    # one environment. See specs/phase4/validation.md V-4/V-5.
    "numpy<2",
    "qiskit>=1.4,<2.0",
    "qiskit-machine-learning>=0.8,<0.9",
    "qiskit-aer>=0.17",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
    "mypy>=1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
files = ["src/gvls/data", "src/gvls/eval"]
